# xvc.py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  requirements.txt  run-tests.zsh
.github/workflows/: coverage.yml  publish.yml
docs/nb/: .gitignore  Readme.ipynb
docs/nb/.xvc/: config.toml
docs/nb/.xvc/store/xvc-pipeline-store/: 1711103171356153.json
src/: file.rs  lib.rs  output.rs  pipeline.rs  storage.rs
src/output/: mod.rs
tests/: conftest.py  test_xvc_file.py  test_xvc_init.py  test_xvc_pipeline.py  test_xvc_root.py  test_xvc_storage.py
