[package]
name = "xvc-py"
version = "0.6.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xvc"
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "^0.10", features = ["vendored"] }
log = "^0.4"
# xvc_rust = { package = "xvc", git = "https://github.com/iesahin/xvc", branch = "main", version = "0.6.3" }
xvc_rust = { package = "xvc", path = "../xvc/lib/" }
xvc_logging = { package = "xvc-logging", path = "../xvc/logging/" }
xvc_walker = { package = "xvc-walker", path = "../xvc/walker/" }
crossbeam-channel = "^0.5"                                                 # xvc_logging = { package = "xvc-logging", git = "https://github.com/iesahin/xvc", branch = "main", version = "0.6.3" }
crossbeam = "^0.8"
pyo3 = { version = "^0.22", features = ["extension-module", "abi3-py37"] }
git-version = "^0.3"
