[package]
name = "xvc-py"
version = "0.6.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xvc"
crate-type = ["cdylib"]

[dependencies]
log = "^0.4"
xvc_rust = { package = "xvc", git = "https://github.com/iesahin/xvc", branch = "main", version = "0.6.13", features = [
  "bundled-openssl",
  "bundled-sqlite",
] }
xvc_logging = { package = "xvc-logging", git = "https://github.com/iesahin/xvc", branch = "main", version = "0.6.13" }
xvc_walker = { package = "xvc-walker", git = "https://github.com/iesahin/xvc", branch = "main", version = "0.6.13" }
# xvc_rust = { package = "xvc", path = "../xvc/lib/" }
# xvc_walker = { package = "xvc-walker", path = "../xvc/walker/" }
# xvc_logging = { package = "xvc-logging", path = "../xvc/logging/" }
crossbeam-channel = "^0.5"
crossbeam = "^0.8"
pyo3 = { version = "^0.23", features = ["extension-module", "abi3-py37"] }
git-version = "^0.3"
